[gd_scene load_steps=10 format=2]

[ext_resource path="res://NewMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/lab2.jpg" type="Texture" id=2]
[ext_resource path="res://sprites/ka1.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 766, 408 )
scale = Vector2( 0.797917, 0.838889 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -67.0
margin_right = 95.0
margin_bottom = 67.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 190.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 190.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 4 )
text = "Options"

[node name="QuitButtton" type="Button" parent="VBoxContainer"]
margin_top = 92.0
margin_right = 190.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButtton" to="." method="_on_QuitButtton_pressed"]
